# Blog4Devs

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
backend-fastapi/: .env.example  .gitignore  pyproject.toml
backend-fastapi/app/: dependencies.py  main.py
backend-fastapi/app/core/: config.py  security.py
backend-fastapi/app/db/: migrate.py  mongodb.py
backend-fastapi/app/models/: schemas.py
backend-fastapi/app/routers/: auth.py  chats.py  questions.py  users.py
backend-fastapi/app/services/: email.py  webhooks.py
backend-fastapi/community_qa_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend-fastapi/tests/: conftest.py  test_auth.py  test_chats.py  test_questions.py  test_users.py
frontend-next/: .env.local.example  .gitignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
frontend-next/app/: actions.ts  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  template.tsx
frontend-next/app/admin/: page.tsx
frontend-next/app/login/: page.tsx
frontend-next/app/mensajes/: loading.tsx  page.tsx
frontend-next/app/mis-preguntas/: page.tsx  (+1 more)
frontend-next/components/: answer-section.tsx  carousel-link.tsx  chat-panel.tsx  login-form.tsx  markdown.tsx  navbar.tsx  question-card.tsx  question-feed.tsx  question-sheet.tsx  role-manager.tsx  theme-toggle.tsx  upvote-button.tsx
frontend-next/lib/: backend.ts  carousel-nav.ts  date.ts  session.ts  validation.ts
frontend-next/playwright-report/: index.html
frontend-next/types/: api.ts
(+11 files in other folders)
