[project]
name = "community-qa-backend"
version = "0.1.0"
description = "FastAPI backend for a public developer Q&A platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "motor>=3.4.0",
  "pydantic[email]>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pymongo>=4.7.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
